Changelog Notes:
New mod icons if you have Mod Manager mod.