@@ -1,2 +1,4 @@
 Changelog Notes:
 New mod icons if you have Mod Manager mod.
+Fixed Evasive bugs
+Changed OnLoad to OnCreatePlayer
